--- a/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable copy.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/en.lproj/Localizable copy.strings
@@ -31,14 +31,14 @@
 "Messages"="Messages";
 "Message"="Message";
 "done"="Done";
-"Pull to refresh"="Pull to refresh";
-"Uploaded Successful"="Uploaded Successful";
-"No data"="No data";
-"Session expired."="Session expired.";
+"pull-to-refresh"="pull-to-refresh";
+"uploaded-successful"="uploaded-successful";
+"no-data"="no-data";
+"session-expired"="session-expired";
 "Retry"="Retry";
-"You are in offline,some funtion may be restricted."="You are in offline,some funtion may be restricted.";
-"Sorry, this account is not use as Driver account. Please contact your administrator for more information"="Sorry, this account is not use as Driver account. Please contact your administrator for more information";
-"Content cann't empty."="Content cann't empty.";
+"you-are-in-offlinesome-funtion-may-be-restricted"="you-are-in-offlinesome-funtion-may-be-restricted";
+"sorry-this-account-is-not-use-as-driver-account-please-contact-your-administrator-for-more-information"="sorry-this-account-is-not-use-as-driver-account-please-contact-your-administrator-for-more-information";
+"content-cannt-empty"="content-cannt-empty";
 
 //LOGIN_SCREEN
 "login_title"="LOGIN";
@@ -55,89 +55,89 @@
 
 // MENU
 "menu"="Menu";
-"Change Password"="Change Password";
+"change-password"="change-password";
 "Logout"="Logout";
 "Routes"="Routes";
 "Assign"="Assign";
 
 //PROFILE
-"First Name"="First Name";
-"Last Name"="Last name";
+"first-name"="first-name";
+"last-name"="Last name";
 "Gender"="Gender";
 "Title"="Title";
-"Birth Date"="Birth Date";
+"birth-date"="birth-date";
 "Public"="Public";
 "Private"="Private";
 "Profile"="Profile";
-"Your password has been updated"="Your password has been updated";
-"Old Password"="Old Password";
-"New Password"="New Password";
-"Confirm Password"="Confirm Password";
+"your-password-has-been-updated"="your-password-has-been-updated";
+"old-password"="old-password";
+"new-password"="new-password";
+"confirm-password"="confirm-password";
 
 //LIST_ORDERS
-"Orders List"="Orders List";
-"You have no order"="You have no order";
-"No order" = "No order";
+"orders-list"="orders-list";
+"you-have-no-order"="you-have-no-order";
+"no-order" = "no-order";
 "New"="New";
-"In Progress"="In Progress";
+"in-progress"="in-progress";
 "Finished"="Finished";
-"Picked Up" = "Picked Up";
-"Missing in Trunk" = "Missing in Trunk";
-"Missing at Pick-up" = "Missing at Pick-up";
+"picked-up" = "picked-up";
+"missing-in-trunk" = "missing-in-trunk";
+"missing-at-pick-up" = "missing-at-pick-up";
 "Cancelled"="Cancelled";
 
-"Total Order"="Total Order";
+"total-order"="total-order";
 "Store"="Store";
 "Warehouse"="Warehouse";
-"Expected time"="Expected time";
-"Records from"="Records from";
-"From date"="From date";
-"To date"="To date";
-"Delivery number"="Delivery number";
+"expected-time"="expected-time";
+"records-from"="records-from";
+"from-date"="from-date";
+"to-date"="to-date";
+"delivery-number"="delivery-number";
 "Urgency"="Urgency";
 "All"="All";//new
 "Assigned"="Assigned";//new
 "Mine"="Mine";//new
 "Driver"="Driver";
-"Pick driver"="Pick driver";
-"Filter orders by"="Filter orders by";
-"OrderID-%d"="OrderID-%d";
+"pick-driver"="pick-driver";
+"filter-orders-by"="filter-orders-by";
+"orderid-d"="orderid-d";
 
 
 //ODER_DETAIL
-"Order Detail"="Order Detail";
-"Delivery number"="Delivery number";
+"order-detail"="order-detail";
+"delivery-number"="delivery-number";
 "Detail"="Detail";
-"Order Status"="Order Status";
-"Order Information"="Order Information";
+"order-status"="order-status";
+"order-information"="order-information";
 "Information"="Information";
-"Order Id"="Order Id";
+"order-id"="order-id";
 "Signature"="Signature";
 "order_detail_notes"="Notes";
 "Picture"="Picture";
-"Order Ref"="Order Ref";
+"order-ref"="order-ref";
 "Status"="Status";
-"Expected Date"="Expected Date";
-"Window Start Time"="Window Start Time";
-"Window End Time"="Window End Time";
-"Service Time"="Service Time";
+"expected-date"="expected-date";
+"window-start-time"="window-start-time";
+"window-end-time"="window-end-time";
+"service-time"="service-time";
 "SEQ"="SEQ";
 "Pallets"="Pallets";
 "Cases"="Cases";
-"Contact Name"="Contact Name";
+"contact-name"="contact-name";
 "Phone"="Phone";
 "Email"="Email";
 "Address"="Address";
 "Description"="Description";
 "Type"="Type";
 "Reason"="Reason";
-"Unable To Start"="Unable To Start";
-"Unable To Finish"="Unable To Finish";
+"unable-to-start"="unable-to-start";
+"unable-to-finish"="unable-to-finish";
 "order_detail_add_note"="Add Note";
 "order_detail_update_barcode"="Update barcode: %@?";
 "order_detail_add_order_item"="Barcode: %@";
 "order_detail_scan_barcode"="Scan Barcode";
-"Enter title"="Enter title";
+"enter-title"="enter-title";
 "order_detail_access_location"="Allow to access your location for direction";
 "order_detail_quality"="Quantity";
 "order_detail_add_image_successfully"="Add image successfully";
@@ -150,100 +150,100 @@
 "order_detail_take_picture"="Take Picture";
 "order_detail_total"="Total";
 "order_detail_barcode_notmatch"="Barcode does not match";
-"Order:#%d has delevered successfully."="Order:#%d has delevered successfully.";
-"Do you want to start this order?"="Do you want to start this order?";
-"Do you want to Finish this order?" = "Do you want to Finish this order?";
+"orderd-has-delevered-successfully"="orderd-has-delevered-successfully";
+"do-you-want-to-start-this-order?"="do-you-want-to-start-this-order?";
+"do-you-want-to-finish-this-order?" = "do-you-want-to-finish-this-order?";
 "Hour"="Hour";
 "Date"="Date";
-"Certificate number"="Certificate number";
-"Client name"="Client name";
-"Customer name"="Customer name";
+"certificate-number"="certificate-number";
+"client-name"="client-name";
+"customer-name"="customer-name";
 "Type"="Type";
 "Urgency"="Urgency";
-"Double type"="Double type";
-"Packages number"="Packages number";
-"Cartons number"="Cartons number";
-"Surfaces number"="Surfaces number";
+"double-type"="double-type";
+"packages-number"="packages-number";
+"cartons-number"="cartons-number";
+"surfaces-number"="surfaces-number";
 "Afternoon"="Afternoon";
 "Vehicle"="Vehicle";
-"From today to tomorrow"="From today to tomorrow";
-"Collection from company"="Collection from company";
-"Starting street"="Starting street";
-"Starting city"="Starting city";
-"Transfer to company"="Transfer to company";
-"Destination street"="Destination street";
-"Destination city"="Destination city";
+"from-today-to-tomorrow"="from-today-to-tomorrow";
+"collection-from-company"="collection-from-company";
+"starting-street"="starting-street";
+"starting-city"="starting-city";
+"transfer-to-company"="transfer-to-company";
+"destination-street"="destination-street";
+"destination-city"="destination-city";
 "Standby"="Standby";
 "Barcode"="Barcode";
-"Package Ref ID"="Package Ref ID";
-"Collect call"="Collect call";
+"package-ref-id"="package-ref-id";
+"collect-call"="collect-call";
 "Status"="Status";
-"Failure cause"="Failure cause";
-"Comments"="Comments";
-"Certificate number (Client)"="Certificate number (Client)";
-"Execution time"="Execution time";
-"Receiver name"="Receiver name";
-"Second receiver name"="Second receiver name";
-"Start time"="Start time";
-"End time"="End time";
+"failure-cause"="failure-cause";
+"comment"comment
+"certificate-number (Client)"="certificate-number (Client)";
+"execution-time"="execution-time";
+"receiver-name"="receiver-name";
+"second-receiver-name"="second-receiver-name";
+"start-time"="start-time";
+"end-time"="end-time";
 "Werehouse"="Werehouse";
-"Third courier"= "Third courier";
-"Coordination phone"="Coordination phone";
-"Finish order"="Finish order";
+"third-courier"= "third-courier";
+"coordination-phone"="coordination-phone";
+"finish-order"="finish-order";
 "Enter note for this order(optional)"="Enter note for this order(optional)";
 "Apartment"="Apartment";
 "Entrance"="Entrance";
 "Floor"="Floor";
-"Nature of goods"="Nature of Goods";
-"Contact phone"="Contact phone";
-"From address"="From address";
-"To address"="To address";
+"nature-of-goods"="Nature of Goods";
+"contact-phone"="contact-phone";
+"from-address"="from-address";
+"to-address"="to-address";
 "From"="From";
 "To"="To";
 "Name"="Name";
 "Volume"="Volume";
 "Pickup"="Pickup";
-"Do you want to pickup this order?"= "Do you want to pickup this order?";
-"Van Load"="Van Load";
+"do-you-want-to-pickup-this-order?"= "do-you-want-to-pickup-this-order?";
+"van-load"="van-load";
 "Deliver"="Deliver";
 
 //ORDER_ASSIGNMENT
-"Orders assignment"="Orders assignment";
+"orders-assignment"="orders-assignment";
 "Today"="Today";
-"Select date"="Select date";
-"Select Items"="Select Items";
+"select-date"="select-date";
+"select-items"="select-items";
 "Assign"="Assign";
-"Please select order."="Please select order.";
-"Assigned successfull."="Assigned successfull.";
+"please-select-order"="please-select-order";
+"assigned-successfull"="assigned-successfull";
 "Driver" = "Driver";
 "Drivers"="Drivers";
 "Coordinator"="Coordinator";
-"Assign to me"="Assign to me";
+"assign-to-me"="assign-to-me";
 
 
 
 
 //REASON_LIST
-"Select Reason"="Select Reason";
-"Please select at least one reason"="Please select at least one reason";
-"Enter a message"="Enter a message";
+"select-reason"="select-reason";
+"please-select-at-least-one-reason"="please-select-at-least-one-reason";
+"enter-a-message"="enter-a-message";
 
 //MESSAGE_SCREEN
 "message_send_new_message"="Send new message";
 "message_add_message_hint"="Type message";
 
 //ROUTE_LIST_SCREEN
-"You have no route"="You have no route";
-"Route Number"="Route number";
-"Route List"="Route List";
+"you-have-no-route"="you-have-no-route";
+"route-number"="Route number";
+"route-list"="route-list";
 "Route" = "Route";
 "Truck" = "Truck";
 "Tanker" = "Tanker";
-"RouteID-%d"="RouteID-%d";
-"Route ID" ="Route ID";
-"%d STOPS"= "%d STOPS";
-"Here is your plan for today - %@" = "Here is your plan for today - %@";
-"Hi %@"="Hi %@";
+"routeid-d"="routeid-d";
+"route-id" ="route-id";
+"d-stops"= "d-stops";
+"here-is-your-plan-for-today" = "here-is-your-plan-for-today";
+"hi"="hi";
 
 //ROUTE DETAIU
 "Locations"="Locations";
@@ -252,78 +252,78 @@
 
 
 //PICTURE
-"Album Gallery"="Album Gallery";
-"Take photo"="Take photo";
-"No images have been added"="No images have been added";
-"Please add pictures in picture tap, before finish this order"="Please add pictures in picture tap, before finish this order";
-"Please add signature in signature tap, before finish this order"="Please add signature in signature tap, before finish this order";
+"album-gallery"="album-gallery";
+"take-photo"="take-photo";
+"no-images-have-been-added"="no-images-have-been-added";
+"please-add-pictures-in-picture-tap-before-finish-this-order"="please-add-pictures-in-picture-tap-before-finish-this-order";
+"please-add-signature-in-signature-tap-before-finish-this-order"="please-add-signature-in-signature-tap-before-finish-this-order";
 
 //PACKAGES
 "Delivery"="Delivery";
 "Backhaul"="Backhaul";
-"Package On Truck" = "Package On Truck";
-"Total cases"="Total cases";
-"Case complete"="Case complete";
-"Case not complete"="Case not complete";
-"Total pallets"="Total pallets";
-"Pallet complete"="Pallet complete";
-"Pallet not complete"="Pallet not complete";
-"Pick Up" = "Pick Up";
+"package-on-truck" = "package-on-truck";
+"total-cases"="total-cases";
+"case-complete"="case-complete";
+"case-not-complete"="case-not-complete";
+"total-pallets"="total-pallets";
+"pallet-complete"="pallet-complete";
+"pallet-not-complete"="pallet-not-complete";
+"pick-up" = "pick-up";
 
 
-"Total double type"="Total double type";
-"Total cartons"="Total cartons";
-"Total packages"="Total packages";
-"Double type complete"="Double type complete";
-"Packages complete"="Packages complete";
-"Cartons complete"="Cartons complete";
-"Double type not complete"="Double type not complete";
-"Cartons not complete"="Cartons not complete";
-"Packages not complete"="Packages not complete";
+"total-double-type"="total-double-type";
+"total-cartons"="total-cartons";
+"total-packages"="total-packages";
+"double-type complete"="double-type complete";
+"packages-complete"="packages-complete";
+"cartons-complete"="cartons-complete";
+"double-type not complete"="double-type not complete";
+"cartons-not-complete"="cartons-not-complete";
+"packages-not-complete"="packages-not-complete";
 
 //TASK
-"Tasks List"="Tasks List";
-"Task Detail"="Task Detail";
-"No Tasks"="No Tasks";
-"Task Id"="Task Id";
+"tasks-list"="tasks-list";
+"task-detail"="task-detail";
+"no-tasks"="no-tasks";
+"task-id"="task-id";
 "TASK"="TASK";
-"Are you sure you want to finish this task?"="Are you sure you want to finish this task?";
-"Are you sure you want to cancel this task?"="Are you sure you want to cancel this task?";
-"Finish task successfully"="Finish task successfully";
-"Task Status"="Task Status";
-"Task Information"="Task Information";
+"are-you-sure-you-want-to-finish-this-task?"="are-you-sure-you-want-to-finish-this-task?";
+"are-you-sure-you-want-to-cancel-this-task?"="are-you-sure-you-want-to-cancel-this-task?";
+"finish-task-successfully"="finish-task-successfully";
+"task-status"="task-status";
+"task-information"="task-information";
 
 //ALERT
 "Alerts"="Alerts";
-"Load more..."="Load more...";
+"load-more"="load-more";
 "Resolve"="Resolve";
-"Alert Detail"="Alert Detail";
-"Driver Name"="Driver Name";
-"Truck Name"="Truck Name";
-"Tanker Name"="Tanker Name";
-"Comment"="Comment";
-"Comment..."="Comment...";
-"Rule ID"="Rule ID";
-"Resolve alert"="Resolve alert";
-"%d years ago"="%d years ago";
-"%d months ago"="%d months ago";
-"%d weeks ago"="%d weeks ago";
-"%d days ago"="%d days ago";
-"%d hours ago"="%d hours ago";
-"%d minutes ago"="%d minutes ago";
-"%d seconds ago"="%d seconds ago";
-"just now"="just now";
-"an hour ago"="an hour ago";
-"an minute ago"="an minute ago";
-"%d day ago"="%d day ago";
-"%d week ago"="%d week ago";
-"%d month ago"="%d month ago";
-"%d year ago"="%d year ago";
+"alert-detail"="alert-detail";
+"driver-name"="driver-name";
+"truck-name"="truck-name";
+"tanker-name"="tanker-name";
+"commentComment";
+"comment"="comment";
+"rule-id"="rule-id";
+"resolve-alert"="resolve-alert";
+"d-years-ago"="d-years-ago";
+"d-months-ago"="d-months-ago";
+"d-weeks-ago"="d-weeks-ago";
+"d-days-ago"="d-days-ago";
+"d-hours-ago"="d-hours-ago";
+"d-minutes-ago"="d-minutes-ago";
+"d-seconds-ago"="d-seconds-ago";
+"just-now"="just-now";
+"an-hour-ago"="an-hour-ago";
+"an-minute-ago"="an-minute-ago";
+"d-day-ago"="d-day-ago";
+"d-week-ago"="d-week-ago";
+"d-month-ago"="d-month-ago";
+"d-year-ago"="d-year-ago";
 
 
 //ALERT DETAIL
-"Driver Name"= "Driver name";//new
-"Tanker Name"="שם מכלית";
+"driver-name"= "Driver name";//new
+"tanker-name"="שם מכלית";
 
 
 //Counter
@@ -331,5 +331,5 @@
 "Reminder"="Reminder";
 "Counter"="Counter";
 "Pause"="Pause";
-"Your task has been over."="Your task has been over.";
+"your-task-has-been-over"="your-task-has-been-over";
 "Resume"="Resume";
