--- a/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/he.lproj/Localizable.strings
@@ -29,16 +29,16 @@
 "Map"="מפה";
 "Messages"="הודעות";
 "Message"="הודעה";
-"Uploaded Successful"="החתימה הושלמה";
+"uploaded-successful"="החתימה הושלמה";
 "done"="אישור";
-"Pull to refresh"="לחץ כדי לרענן";
-"No data"="אין מידע";
+"pull-to-refresh"="לחץ כדי לרענן";
+"no-data"="אין מידע";
 "minutes"="דקות";
-"Session expired."="פג תוקף הפעילות באתר.";
+"session-expired"="פג תוקף הפעילות באתר.";
 "Retry"="נסה שוב";
-"You are in offline,some funtion may be restricted."="החיבור לאינטרנט מנותק. חלק מהאפשרויות מוגבלות כרגע.";
-"Sorry, this account is not use as Driver account. Please contact your administrator for more information"="חשבון זה אינו חשבון נהג. צור קשר עם מנהל המערכת למידע נוסף.";
-"Content cann't empty."="Content cann't empty.";// new
+"you-are-in-offlinesome-funtion-may-be-restricted"="החיבור לאינטרנט מנותק. חלק מהאפשרויות מוגבלות כרגע.";
+"sorry-this-account-is-not-use-as-driver-account-please-contact-your-administrator-for-more-information"="חשבון זה אינו חשבון נהג. צור קשר עם מנהל המערכת למידע נוסף.";
+"content-cannt-empty"="content-cannt-empty";// new
 
 //LOGIN_SCREEN
 "login_title"="התחברות";
@@ -55,74 +55,74 @@
 
 //MENU
 "menu"="תַפרִיט";
-"Change Password"="שנה סיסמא";
+"change-password"="שנה סיסמא";
 "Logout"="להתנתק";
 "Routes" = "מסלולים";
 "Route" = "מסלול";
 
 //PROFILE
-"First Name"="שם פרטי";
-"Last Name"="שם משפחה";
+"first-name"="שם פרטי";
+"last-name"="שם משפחה";
 "Gender"="Gender";
 "Title"="Title";
-"Birth Date"="Birth Date";
+"birth-date"="birth-date";
 "Public"="ציבורי";
 "Private"="פרטי";
 "Profile"="פרופיל";
-"Your password has been updated"="Your password has been updated";//new
-"Old Password"="סיסמה ישנה";
-"New Password"="סיסמה חדשה";
-"Confirm Password"="אישור סיסמה חדשה";
+"your-password-has-been-updated"="your-password-has-been-updated";//new
+"old-password"="סיסמה ישנה";
+"new-password"="סיסמה חדשה";
+"confirm-password"="אישור סיסמה חדשה";
 
 
 
 //LIST_ORDERS
-"Orders List"="רשימת הזמנות";
-"You have no order"="אין לך הזמנה";
-"No order" = "שום סדר";
+"orders-list"="רשימת הזמנות";
+"you-have-no-order"="אין לך הזמנה";
+"no-order" = "שום סדר";
 "New"="חדש";
-"In Progress"="בתהליך";
+"in-progress"="בתהליך";
 "Finished"="מוגמר";
-"Picked Up" = "Picked Up";
-"Missing in Trunk" = "Missing in Trunk";
-"Missing at Pick-up" = "Missing at Pick-up";
+"picked-up" = "picked-up";
+"missing-in-trunk" = "missing-in-trunk";
+"missing-at-pick-up" = "missing-at-pick-up";
 "Cancelled"="מבוטל";
-"Records from"="רשומות מ";
-"From date"="מתאריך";
-"To date"="עד תאריך";
-"Delivery number"="מספר משלוח";
+"records-from"="רשומות מ";
+"from-date"="מתאריך";
+"to-date"="עד תאריך";
+"delivery-number"="מספר משלוח";
 "Urgency"="דחיפות";
 
 
-"Total Order"= "סה''כ הזמנות";
+"total-order"= "סה''כ הזמנות";
 "Store"="חנות";
 "Warehouse"="מחסן";
-"Expected time"="Expected time";//New
+"expected-time"="expected-time";//New
 "All"="הכל";
 "Assigned"="נהגים אחרים";
 "Mine"="שלי";
 "Driver"="נהג";
-"Pick driver"="שיוך ל-";
-"Filter orders by"="סינון הזמנות לפי";
-"OrderID-%d"="מספר הזמנה-%d";
+"pick-driver"="שיוך ל-";
+"filter-orders-by"="סינון הזמנות לפי";
+"orderid-d"="מספר הזמנה-%d";
 
 //ODER_DETAIL
-"Order Detail"="פרטי הזמנה";
-"Delivery number"="מס' משלוח";
+"order-detail"="פרטי הזמנה";
+"delivery-number"="מס' משלוח";
 "Detail"="פירוט";
-"Order Status"="סטטוס משלוח";
-"Order Information"="מידע על ההזמנה";
+"order-status"="סטטוס משלוח";
+"order-information"="מידע על ההזמנה";
 "Information"="מידע";
-"Order Id"="מספר הזמנה";
+"order-id"="מספר הזמנה";
 "Signature"="חתימה";
 "order_detail_notes"="הערות";
 "Picture"="תמונה";
-"Order Ref"="הזמנה Ref";
+"order-ref"="הזמנה Ref";
 "Status"="סטָטוּס";
-"Expected Date"="תאריך צפוי";
-"Window Start Time"="Window Start Time";//new
-"Window End Time"="Window End Time";//new
-"Service Time"="Service Time";//new
+"expected-date"="תאריך צפוי";
+"window-start-time"="window-start-time";//new
+"window-end-time"="window-end-time";//new
+"service-time"="service-time";//new
 "SEQ"="SEQ";
 "Pallets"="Pallets";//new
 "Cases"="Cases";//new
@@ -133,13 +133,13 @@
 "Description"="תיאור";
 "Type"="סוּג";
 "Reason"="סיבת הכשל";
-"Unable To Start"="לא יכול להתחיל";
-"Unable To Finish"="לא ניתן לסיים";
+"unable-to-start"="לא יכול להתחיל";
+"unable-to-finish"="לא ניתן לסיים";
 "order_detail_add_note"="להוסיף הערה";
 "order_detail_update_barcode"="עדכון ברקוד:% @?";
 "order_detail_add_order_item"="ברקוד:% @";
 "order_detail_scan_barcode"="ברקוד סריקה";
-"Enter title"="הזן כותרת";
+"enter-title"="הזן כותרת";
 "order_detail_access_location"="אפשר לגשת למיקום שלך לקבלת כיוון";
 "order_detail_quality"="כַּמוּת";
 "order_detail_add_image_successfully"="הוסף תמונה בהצלחה";
@@ -155,87 +155,87 @@
 
 "Hour"="שעת קבלה";
 "Date"="תאריך";
-"Certificate number"="מס' תעודת משלוח";
-"Client name"="שם לקוח";
-"Customer name"="שם מזמין";
+"certificate-number"="מס' תעודת משלוח";
+"client-name"="שם לקוח";
+"customer-name"="שם מזמין";
 "Type"="סוג משלוח";
 "Urgency"="דחוף";
-"Double type"="סוג כפולה";
+"double-type"="סוג כפולה";
 
-"Packages number"="מספר משלוח";
-"Cartons number"="מספר קרטונים";
-"Surfaces number"="מספר משטחים";
+"packages-number"="מספר משלוח";
+"cartons-number"="מספר קרטונים";
+"surfaces-number"="מספר משטחים";
 "Afternoon"="אחה''צ";
 "Vehicle"="אמצעי הובלה";
-"From today to tomorrow"="מהיום למחר";
-"Collection from company"="איסוף מחברה";
-"Starting street"="רחוב מוצא";
-"Starting city"="ישוב מוצא";
-"Transfer to company"="העברה לחברה";
-"Destination street"="רחוב יעד";
-"Destination city"="ישוב יעד";
+"from-today-to-tomorrow"="מהיום למחר";
+"collection-from-company"="איסוף מחברה";
+"starting-street"="רחוב מוצא";
+"starting-city"="ישוב מוצא";
+"transfer-to-company"="העברה לחברה";
+"destination-street"="רחוב יעד";
+"destination-city"="ישוב יעד";
 "Standby"="המתנה";
 "Barcode"="ברקוד";
-"Package Ref ID"="Package Ref ID";
-"Collect call"="גוביינא";
+"package-ref-id"="package-ref-id";
+"collect-call"="גוביינא";
 "Status"="סטטוס";
-"Failure cause"="סיבת הכשל";
-"Comments"="הערות";
-"Certificate number (Client)"="מספר תעודה (לקוח)";
-"Execution time"="זמן ביצוע";
-"Receiver name"="שם מקבל";
-"Second receiver name"="שם מקבל שני";
-"Start time"="שעת התחלה";
-"End time"="שעת סיום";
+"failure-cause"="סיבת הכשל";
+"comment"הערות";
+"certificate-number (Client)"="מספר תעודה (לקוח)";
+"execution-time"="זמן ביצוע";
+"receiver-name"="שם מקבל";
+"second-receiver-name"="שם מקבל שני";
+"start-time"="שעת התחלה";
+"end-time"="שעת סיום";
 "YES"="כן";
 "NO"="NO";
 "Instructions"= "הוראות";
-"Third courier"= "שליח שלישי";
-"Coordination phone"="ת. טלפוני";
+"third-courier"= "שליח שלישי";
+"coordination-phone"="ת. טלפוני";
 "Receiver phone"="טלפון מקבל";
-"Finish order"="סיום הזמנה";
+"finish-order"="סיום הזמנה";
 "Enter note for this order(optional)"="הכנסת הודעה להזמנה זו (אופציונלי)";
 "Apartment"="דירה";
 "Entrance"="כניסה";
 "Floor"="קומה";
-"Nature of goods"="מטען";
-"Contact phone"="טלפון איש קשר";
-"From address"="מכתובת";
-"To address"="עד כתובת";
+"nature-of-goods"="מטען";
+"contact-phone"="טלפון איש קשר";
+"from-address"="מכתובת";
+"to-address"="עד כתובת";
 "From"="ממקום";
 "To"="למקום";
 "Name"="שם";
 "Volume"="כמות";
-"Order:#%d has delevered successfully."="Order:#%d has delevered successfully.";//new
-"Do you want to start this order?"="Do you want to start this order?";//new
-"Do you want to Finish this order?" = "Do you want to Finish this order?";//new
-"Do you want to pickup this order?"= "Do you want to pickup this order?";//new
-"Van Load"="Van Load";//new
+"orderd-has-delevered-successfully"="orderd-has-delevered-successfully";//new
+"do-you-want-to-start-this-order?"="do-you-want-to-start-this-order?";//new
+"do-you-want-to-finish-this-order?" = "do-you-want-to-finish-this-order?";//new
+"do-you-want-to-pickup-this-order?"= "do-you-want-to-pickup-this-order?";//new
+"van-load"="van-load";//new
 "Deliver"="Deliver";//new
 
 
 //ORDER_ASSIGNMENT
-"Orders assignment"="שיוך משימות";
+"orders-assignment"="שיוך משימות";
 "Today"="היום";
-"Select date"="בחר תאריך";
-"Select Items"="בחירת משימה";
+"select-date"="בחר תאריך";
+"select-items"="בחירת משימה";
 "Assign"="שיוך משימות";
-"Please select order."="נא לבחור הזמנה.";
-"Assigned successfull."="שיוך בוצע בהצלחה.";
+"please-select-order"="נא לבחור הזמנה.";
+"assigned-successfull"="שיוך בוצע בהצלחה.";
 "Select"="בחירה";
 "Search..."="חיפוש...";
 "Coordinator"="רכז";
 "Coordinators"="רכזים";
 "Driver" = "נהג";
 "Drivers"="נהגים";
-"Assign to me"="שיוך אליי";
+"assign-to-me"="שיוך אליי";
 
 
 
 //REASON_LIST
-"Select Reason"="בחר סיבה";
-"Please select at least one reason"="בחר סיבה אחת לפחות";
-"Enter a message"="סיבת הכשל";
+"select-reason"="בחר סיבה";
+"please-select-at-least-one-reason"="בחר סיבה אחת לפחות";
+"enter-a-message"="סיבת הכשל";
 
 //MESSAGE_SCREEN
 "message_send_new_message"="שלח הודעה חדשה";
@@ -243,16 +243,16 @@
 
 
 //ROUTE_LIST_SCREEN
-"You have no route"="אין לך מסלולים כרגע";
-"Route Number"="Route number";//new
+"you-have-no-route"="אין לך מסלולים כרגע";
+"route-number"="Route number";//new
 "Routes List"="רשימת מסלולים";
 "Truck"="משאית";
 "Tanker"="מכלית";
-"RouteID-%d"="מספר מסלול-%d";
-"Route ID" ="מספר מסלול";
-"%d STOPS"= "%d STOPS"; //New
-"Here is your plan for today - %@" = "Here is your plan for today - %@";//new
-"Hi %@"="Hi %@";//new
+"routeid-d"="מספר מסלול-%d";
+"route-id" ="מספר מסלול";
+"d-stops"= "d-stops"; //New
+"here-is-your-plan-for-today" = "here-is-your-plan-for-today";//new
+"hi"="hi";//new
 
 
 //ROUTE DETAIU
@@ -261,77 +261,77 @@
 "Stops"="Stops";//new
 
 //PICTURE
-"Album Gallery"="בחירה מתוך הגלריה";
-"Take photo"="צלם תמונה";
-"No images have been added"="לא נוספו תמונות";
-"Please add pictures in picture tap, before finish this order"="נדרשת תמונה כדי לסיים הזמנה זו";
-"Please add signature in signature tap, before finish this order"="נדרשת חתימה כדי לסיים הזמנה זו";
+"album-gallery"="בחירה מתוך הגלריה";
+"take-photo"="צלם תמונה";
+"no-images-have-been-added"="לא נוספו תמונות";
+"please-add-pictures-in-picture-tap-before-finish-this-order"="נדרשת תמונה כדי לסיים הזמנה זו";
+"please-add-signature-in-signature-tap-before-finish-this-order"="נדרשת חתימה כדי לסיים הזמנה זו";
 
 //PACKAGES
 "Delivery"="משלוח";
 "Backhaul"="איסוף";
-"Package On Truck" = "חבילות במשאית";
-"Total cases"="סה''כ מקרים";
-"Case complete"="מקרים שהושלמו";
-"Case not complete"="מקרים שלא הושלמו";
-"Total pallets"="סה''כ משטחים";
-"Pallet complete"="משטחים שהושלמו";
-"Pallet not complete"="משטחים שלא הושלמו";
-"Pick Up" = "איסוף";
+"package-on-truck" = "חבילות במשאית";
+"total-cases"="סה''כ מקרים";
+"case-complete"="מקרים שהושלמו";
+"case-not-complete"="מקרים שלא הושלמו";
+"total-pallets"="סה''כ משטחים";
+"pallet-complete"="משטחים שהושלמו";
+"pallet-not-complete"="משטחים שלא הושלמו";
+"pick-up" = "איסוף";
 
-"Total double type"="סה''כ משטחים";
-"Total cartons"="סה''כ קרטונים";
-"Total packages"="סה''כ חבילות";
-"Double type complete"="משטחים שהושלמו";
-"Packages complete"="חבילות שהושלמו";
-"Cartons complete"="קרטונים שהושלמו";
-"Double type not complete"="משטחים שלא הושלמו";
-"Cartons not complete"="קרטונים שלא הושלמו";
-"Packages not complete"="חבילות שלא הושלמו";
+"total-double-type"="סה''כ משטחים";
+"total-cartons"="סה''כ קרטונים";
+"total-packages"="סה''כ חבילות";
+"double-type complete"="משטחים שהושלמו";
+"packages-complete"="חבילות שהושלמו";
+"cartons-complete"="קרטונים שהושלמו";
+"double-type not complete"="משטחים שלא הושלמו";
+"cartons-not-complete"="קרטונים שלא הושלמו";
+"packages-not-complete"="חבילות שלא הושלמו";
 
 //TASK
-"Tasks List"="רשימת משימות";
-"Task Detail"="פרטי משימה";
-"No Tasks"="אין משימות";
+"tasks-list"="רשימת משימות";
+"task-detail"="פרטי משימה";
+"no-tasks"="אין משימות";
 "TASK"="משימה";
-"Task Id"="מספר משימה";
-"Are you sure you want to finish this task?"="האם ברצונך לסיים את המשימה הזו?";
-"Are you sure you want to cancel this task?"="האם ברצונך לבטל את המשימה הזו?";
-"Finish task successfully"="סיום משימה בוצע בהצלחה";
-"Task Status"="סטטוס משימה";
-"Task Information"="מידע על המשימה";
+"task-id"="מספר משימה";
+"are-you-sure-you-want-to-finish-this-task?"="האם ברצונך לסיים את המשימה הזו?";
+"are-you-sure-you-want-to-cancel-this-task?"="האם ברצונך לבטל את המשימה הזו?";
+"finish-task-successfully"="סיום משימה בוצע בהצלחה";
+"task-status"="סטטוס משימה";
+"task-information"="מידע על המשימה";
 
 
 //ALERT
 "Alerts"="התראות";
-"Load more..."="טען עוד..";
+"load-more"="טען עוד..";
 "Resolve"="פתירה";
-"Alert Detail"="פרטי התראה";
-"Truck Name"="שם משאית";
-"Comment"="הערה";
-"Comment..."="הערה...";
-"Rule ID"="מספר חוק";
-"Resolve alert"="פתירת התראה";
-"%d years ago"="לפני %d שנים";
-"%d months ago"="לפני %d חודשים";
-"%d weeks ago"="לפני %d שבועות";
-"%d days ago"="לפני %d ימים";
-"%d hours ago"="לפני %d שעות";
-"%d minutes ago"="לפני %d דקות";
-"just now"="עכשיו";
-"%d day ago"="לפני d% יום";
-"%d week ago"="לפני שבוע  %d";
-"%d month ago"="%d חודש";
-"%d year ago"="לפני %d שנה";
+"alert-detail"="פרטי התראה";
+"truck-name"="שם משאית";
+"commentהערה";
+"comment"="הערה...";
+"rule-id"="מספר חוק";
+"resolve-alert"="פתירת התראה";
+"d-years-ago"="לפני %d שנים";
+"d-months-ago"="לפני %d חודשים";
+"d-weeks-ago"="לפני %d שבועות";
+"d-days-ago"="לפני %d ימים";
+"d-hours-ago"="לפני %d שעות";
+"d-minutes-ago"="לפני %d דקות";
+"just-now"="עכשיו";
+"d-day-ago"="לפני d% יום";
+"d-week-ago"="לפני שבוע  %d";
+"d-month-ago"="%d חודש";
+"d-year-ago"="לפני %d שנה";
 
 //ALERT DETAIL
-"Driver Name"= "שם הנהג";
-"Tanker Name"="שם מכלית";
+"driver-name"= "שם הנהג";
+"tanker-name"="שם מכלית";
 
 
 //Counter
 "Reminder"="תזכורת";
 "Counter"="מונה";
 "Pause"="הפסקה";
-"Your task has been over."="המשימה שלך נגמרה.";
+"your-task-has-been-over"="המשימה שלך נגמרה.";
 "Resume"="קורות חיים";
