--- a/DMSDriver/DMSDriver/Supporting Files/Localize/pt-BR.lproj/Localizable.strings
+++ b/DMSDriver/DMSDriver/Supporting Files/Localize/pt-BR.lproj/Localizable.strings
@@ -29,10 +29,10 @@
 "Map"="מפה";
 "Messages"="הודעות";
 "Message"="Message";//new
-"Uploaded Successful"="החתימה הושלמה";
+"uploaded-successful"="החתימה הושלמה";
 "done"="אישור";
-"Pull to refresh"="לחץ כדי לרענן";
-"No data"="No data";//new
+"pull-to-refresh"="לחץ כדי לרענן";
+"no-data"="no-data";//new
 
 //LOGIN_SCREEN
 "login_title"="התחברות";
@@ -49,49 +49,49 @@
 
 //MENU
 "menu"="תַפרִיט";
-"Change Password"="שנה סיסמא";
+"change-password"="שנה סיסמא";
 "Logout"="להתנתק";
 "Routes" = "מסלולים";
 "Route" = "מסלול";
 
 //PROFILE
-"First Name"="שם פרטי";
-"Last Name"="שם משפחה";
+"first-name"="שם פרטי";
+"last-name"="שם משפחה";
 "Gender"="Gender";
 "Title"="Title";
-"Birth Date"="Birth Date";
+"birth-date"="birth-date";
 "Public"="ציבורי";
 "Private"="פרטי";
 "Profile"="פרופיל";
-"Your password has been updated"="Your password has been updated";//new
-"Old Password"="סיסמה ישנה";
-"New Password"="סיסמה חדשה";
-"Confirm Password"="אישור סיסמה חדשה";
+"your-password-has-been-updated"="your-password-has-been-updated";//new
+"old-password"="סיסמה ישנה";
+"new-password"="סיסמה חדשה";
+"confirm-password"="אישור סיסמה חדשה";
 
 
 
 //LIST_ORDERS
-"Orders List"="רשימת הזמנות";
-"You have no order"="אין לך הזמנה";
-"No order" = "שום סדר";
+"orders-list"="רשימת הזמנות";
+"you-have-no-order"="אין לך הזמנה";
+"no-order" = "שום סדר";
 "New"="חדש";
-"In Progress"="בתהליך";
+"in-progress"="בתהליך";
 "Finished"="חדש";
-"Picked Up" = "Picked Up";
-"Missing in Trunk" = "Missing in Trunk";
-"Missing at Pick-up" = "Missing at Pick-up";
+"picked-up" = "picked-up";
+"missing-in-trunk" = "missing-in-trunk";
+"missing-at-pick-up" = "missing-at-pick-up";
 "Cancelled"="מבוטל";
-"Records from"="רשומות מ";
-"From date"="מתאריך";
-"To date"="עד תאריך";
-"Delivery number"="מספר משלוח";
+"records-from"="רשומות מ";
+"from-date"="מתאריך";
+"to-date"="עד תאריך";
+"delivery-number"="מספר משלוח";
 "Urgency"="דחיפות";
 
 
-"Total Order"= "סה''כ הזמנות";
+"total-order"= "סה''כ הזמנות";
 "Store"="חנות";
 "Warehouse"="מחסן";
-"Expected time"="Expected time";//New
+"expected-time"="expected-time";//New
 "All"="All";//new
 "Assigned"="Assigned";//new
 "Mine"="Mine";//new
@@ -99,39 +99,39 @@
 
 
 //ODER_DETAIL
-"Order Detail"="פרטי הזמנה";
-"Delivery number"="מס' משלוח";
+"order-detail"="פרטי הזמנה";
+"delivery-number"="מס' משלוח";
 "Detail"="פירוט";
-"Order Status"="סטטוס משלוח";
-"Order Information"="מידע על ההזמנה";
+"order-status"="סטטוס משלוח";
+"order-information"="מידע על ההזמנה";
 "Information"="מידע";
-"Order Id"="מספר הזמנה";
+"order-id"="מספר הזמנה";
 "Signature"="חתימה";
 "order_detail_notes"="הערות";
 "Picture"="תמונה";
-"Order Ref"="הזמנה Ref";
+"order-ref"="הזמנה Ref";
 "Status"="סטָטוּס";
-"Expected Date"="תאריך צפוי";
-"Window Start Time"="Window Start Time";//new
-"Window End Time"="Window End Time";//new
-"Service Time"="Service Time";//new
+"expected-date"="תאריך צפוי";
+"window-start-time"="window-start-time";//new
+"window-end-time"="window-end-time";//new
+"service-time"="service-time";//new
 "SEQ"="SEQ";
 "Pallets"="Pallets";//new
 "Cases"="Cases";//new
-"Contact Name"="שם איש קשר";
+"contact-name"="שם איש קשר";
 "Phone"="טלפון";
 "Address"="כתובת";
 "Email"="דוא''ל";
 "Description"="תיאור";
 "Type"="סוּג";
 "Reason"="סיבת הכשל";
-"Unable To Start"="לא יכול להתחיל";
-"Unable To Finish"="לא ניתן לסיים";
+"unable-to-start"="לא יכול להתחיל";
+"unable-to-finish"="לא ניתן לסיים";
 "order_detail_add_note"="להוסיף הערה";
 "order_detail_update_barcode"="עדכון ברקוד:% @?";
 "order_detail_add_order_item"="ברקוד:% @";
 "order_detail_scan_barcode"="ברקוד סריקה";
-"Enter title"="הזן כותרת";
+"enter-title"="הזן כותרת";
 "order_detail_access_location"="אפשר לגשת למיקום שלך לקבלת כיוון";
 "order_detail_quality"="כַּמוּת";
 "order_detail_add_image_successfully"="הוסף תמונה בהצלחה";
@@ -147,82 +147,82 @@
 
 "Hour"="שעת קבלה";
 "Date"="תאריך";
-"Certificate number"="מס' תעודת משלוח";
-"Client name"="שם לקוח";
-"Customer name"="שם מזמין";
+"certificate-number"="מס' תעודת משלוח";
+"client-name"="שם לקוח";
+"customer-name"="שם מזמין";
 "Type"="סוג משלוח";
 "Urgency"="דחוף";
-"Double type"="סוג כפולה";
-"Packages number"="מספר חבילות";
-"Cartons number"="מספר קרטונים";
-"Surfaces number"="מספר משטחים";
+"double-type"="סוג כפולה";
+"packages-number"="מספר חבילות";
+"cartons-number"="מספר קרטונים";
+"surfaces-number"="מספר משטחים";
 "Afternoon"="אחה''צ";
 "Vehicle"="אמצעי הובלה";
-"From today to tomorrow"="מהיום למחר";
-"Collection from company"="איסוף מחברה";
-"Starting street"="רחוב מוצא";
-"Starting city"="ישוב מוצא";
-"Transfer to company"="העברה לחברה";
-"Destination street"="רחוב יעד";
-"Destination city"="ישוב יעד";
+"from-today-to-tomorrow"="מהיום למחר";
+"collection-from-company"="איסוף מחברה";
+"starting-street"="רחוב מוצא";
+"starting-city"="ישוב מוצא";
+"transfer-to-company"="העברה לחברה";
+"destination-street"="רחוב יעד";
+"destination-city"="ישוב יעד";
 "Standby"="המתנה";
 "Barcode"="ברקוד";
-"Collect call"="גוביינא";
+"collect-call"="גוביינא";
 "Status"="סטטוס";
-"Failure cause"="סיבת הכשל";
-"Comments"="הערות";
-"Certificate number (Client)"="מספר תעודה (לקוח)";
-"Execution time"="זמן ביצוע";
-"Receiver name"="שם מקבל";
-"Second receiver name"="שם מקבל שני";
-"Start time"="שעת התחלה";
-"End time"="שעת סיום";
+"failure-cause"="סיבת הכשל";
+"comment"הערות";
+"certificate-number (Client)"="מספר תעודה (לקוח)";
+"execution-time"="זמן ביצוע";
+"receiver-name"="שם מקבל";
+"second-receiver-name"="שם מקבל שני";
+"start-time"="שעת התחלה";
+"end-time"="שעת סיום";
 "YES"="כן";
 "NO"="NO";
 "Instructions"= "הוראות";
-"Third courier"= "שליח שלישי";
-"Coordination phone"="ת. טלפוני";
+"third-courier"= "שליח שלישי";
+"coordination-phone"="ת. טלפוני";
 
 
 //ORDER_ASSIGNMENT
-"Orders assignment"="Orders assignment";//new
+"orders-assignment"="orders-assignment";//new
 "Today"="Today";//new
-"Select date"="Select date";//new
-"Select Items"="Select Items";
+"select-date"="select-date";//new
+"select-items"="select-items";
 "Assign"="Assign";//new
-"Please select order."="Please select order.";//new
-"Assigned successfull."="Assigned successfull.";//new
+"please-select-order"="please-select-order";//new
+"assigned-successfull"="assigned-successfull";//new
 
 
 
 //REASON_LIST
-"Select Reason"="בחר סיבה";
-"Please select at least one reason"="בחר סיבה אחת לפחות";
-"Enter a message"="סיבת הכשל";
+"select-reason"="בחר סיבה";
+"please-select-at-least-one-reason"="בחר סיבה אחת לפחות";
+"enter-a-message"="סיבת הכשל";
 
 //MESSAGE_SCREEN
 "message_send_new_message"="שלח הודעה חדשה";
 "message_add_message_hint"="הקלד הודעה";
 
 //ROUTE_LIST_SCREEN
-"You have no route"="You have no route"; //new
-"Route Number"="Route number";//new
+"you-have-no-route"="you-have-no-route"; //new
+"route-number"="Route number";//new
 "Routes List"="רשימת מסלולים";
 
 //PICTURE
-"Album Gallery"="בחירה מתוך הגלריה";
-"Take photo"="צלם תמונה";
-"No images have been added"="לא נוספו תמונות";
-"Please add pictures in picture tap, before finish this order"="Please add pictures in picture tap, before finish this order";//new
-"Please add signature in signature tap, before finish this order"="Please add signature in signature tap, before finish this order";//new
+"album-gallery"="בחירה מתוך הגלריה";
+"take-photo"="צלם תמונה";
+"no-images-have-been-added"="לא נוספו תמונות";
+"please-add-pictures-in-picture-tap-before-finish-this-order"="please-add-pictures-in-picture-tap-before-finish-this-order";//new
+"please-add-signature-in-signature-tap-before-finish-this-order"="please-add-signature-in-signature-tap-before-finish-this-order";//new
 
 //PACKAGES
 "Delivery"="משלוח";
 "Backhaul"="גרירה בחזרה";
-"Package On Truck" = "חבילות במשאית";
-"Total cases"="סה''כ מקרים";
-"Case complete"="מקרים שהושלמו";
-"Case not complete"="מקרים שלא הושלמו";
-"Total pallets"="סה''כ משטחים";
-"Pallet complete"="משטחים שהושלמו";
-"Pallet not complete"="משטחים שלא הושלמו";
+"package-on-truck" = "חבילות במשאית";
+"total-cases"="סה''כ מקרים";
+"case-complete"="מקרים שהושלמו";
+"case-not-complete"="מקרים שלא הושלמו";
+"total-pallets"="סה''כ משטחים";
+"pallet-complete"="משטחים שהושלמו";
+"pallet-not-complete"="משטחים שלא הושלמו";
